frontend/src/components/list/style/CommonStyle.module.css
.container {
  margin: 40px;
  width: 90%;
  padding: 0 40px 20px;
}

.table {
  width: 100%;
  border-collapse: collapse;
}

.table th {
  text-align: left;
  font-size: 0.5rem;
}

.table td {
  padding: 12px;
  border-bottom: 1px solid #f2f2f2;
  text-align: left;
}

.table th {
  font-weight: bold;
}

.link {
  text-decoration: none;
  color: inherit;
}

.table tr:hover {
  background-color: #f2f2f2;
  cursor: pointer;
}

.width70 {
  width: 70%;
}

.emptyMessage {
  text-align: center;
  margin-top: 80px;
  font-size: 1.25rem;
  color: #adadad;
}

